2008-07-22  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpcolortool.c: set scroll_lock to TRUE while moving
	or creating sample points so the image doesn't scroll while a new
	sample point is dragged from the rulers and sample points can be
	deleted by dragging them out of image without scrolling at the
	same time.

2008-07-22  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpvectortool.c: only use the position from the event
	coordinates when creating or modifying strokes. Initialize all
	other GimpCoords fields with default values.

2008-07-22  Sven Neumann  <sven@gimp.org>

	* app/vectors/gimpbezierstroke.c: formatting.

2008-07-22  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpsessioninfo-aux.c
	(gimp_session_info_aux_new_from_props): plugged memory leak.

2008-07-22  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimphistogramview.c
	(gimp_histogram_view_set_background): fixed refcounting	issue.
	This plugs the memory leak I tried to fix in GimpHistogramEditor.

2008-07-22  Sven Neumann  <sven@gimp.org>

	* app/base/gimphistogram.[ch]: added new method
	gimp_histogram_duplicate().

	* app/widgets/gimphistogrameditor.c
	(gimp_histogram_editor_frozen_update): instead of recalculating
	the histogram, use a duplicate for the background histogram.

2008-07-22  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimphistogrameditor.c (gimp_histogram_editor_set_image):
	reverted last change, it did not plug the leak.

2008-07-22  Sven Neumann  <sven@gimp.org>

	* app/gui/session.c (session_init): plugged a small memory leak.

2008-07-21  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimphistogrameditor.c
	(gimp_histogram_editor_set_image): always unset and unref the
	histograms. Plugs a memory leak reported by valgrind.

2008-07-21  Simon Budig  <simon@gimp.org>

	* app/core/gimpcoords.c: incorporate the velocity.

2008-07-21  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpdrawtool.c (gimp_draw_tool_on_vectors_handle):
	plugged a not so small memory leak.
